# vaanieval

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  self_hosted_vs_closed_source_voice_eval.md  start-dev.ps1  start-dev.sh  startup-backend.ps1  startup-frontend.ps1  vercel.json
.agents/skills/seo-operator/: SKILL.md
.codex/agents/: analytics-reviewer.toml  content-editor.toml  keyword-researcher.toml  technical-seo-auditor.toml
.github/: SUPPORT.md
.github/DISCUSSION_TEMPLATE/: general.yml  ideas.yml  q-a.yml  show-and-tell.yml
.github/workflows/: ci.yml  deploy-backend.yml
api/: index.py
backend/: .env.example  Dockerfile  README.md  alembic.ini  backend.db  requirements-dev.txt  requirements.txt  setup_eval_provider.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_evaluations_foundation.py  0003_encryptable_api_keys.py  0004_evaluation_qa_summaries.py  0004_nullable_eval_provider_api_keys.py  0005_enqueue_conversation_timestamp_backfill.py  0006_reporting_alerts.py  0007_conversation_display_names.py  0008_audio_waveform_peaks.py  0009_backfill_audio_waveforms.py  0009_backfill_existing_audio_waveforms.py  0010_versioned_evaluation_rubrics.py
backend/api/: index.py
backend/app/: main.py  worker.py
backend/app/api/: deps.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  auth.py  conversation.py  evaluation.py  import_job.py  job_queue.py  provider.py  reporting.py  user.py
backend/app/providers/: base.py  bolna_adapter.py  elevenlabs_adapter.py  factory.py  (+1 more)
backend/docs/: implementation-notes.md
backend/scripts/: backfill_conversation_display_names.py  run_worker.py
backend/tests/: test_health.py
datasets/regression/: real_user_agent_openai_eval.yaml
datasets/stress/: stress_noise_interruptions.yaml
docs/: architecture.md  azure-backend-deployment.md  backend-architecture.md  cli-and-api.md  configuration.md  contributing.md  development.md  index.md  landing-page-redesign-plan.md  metrics-and-gates.md  quickstart.md  scenarios.md  seo-keyword-strategy.md  seo-keywords.csv  troubleshooting.md
docs/features/: README.md
docs/v2-plan/: README.md  audio-scalability-plan.md  operational-reporting-alerting-lld.md  operational-reporting-alerting.md  roadmap.md  score-taxonomy.md
examples/: audio_interface.py  run_conversation.py  setup_agent.py
examples/web/: index.html
frontend/: .env.example  .env.production  README.md  index.html  package-lock.json  package.json  vercel.json
frontend/src/: App.tsx  index.css  main.tsx
print-assets/official-logo-edition/: PRINT-SPECS.md
print-assets/vaanieval-polo-print-assets/: PRINT-SPECS.md
site/: .env.example  next.config.mjs  package-lock.json  package.json
site/app/: globals.css  layout.tsx  not-found.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
site/components/: Analytics.tsx  BookingButton.tsx  Cta.tsx  Footer.tsx  GitHubCta.tsx  Header.tsx  IntegrationStatus.tsx  PageHero.tsx  TrackedLink.tsx
site/lib/: site.ts
tests/: test_auth_magic_link.py  test_backend_bolna_audio_stream.py  test_backend_provider_timestamps.py  test_backend_search_indexing.py  test_config.py  test_dashboard_qa_gate.py  test_ollama_eval_api.py  test_ollama_eval_provider.py  test_ollama_migration.py  test_reporting.py  test_schema_validation.py  test_scoring_determinism.py  test_vapi_adapter.py
tests/integration/: test_live_elevenlabs_smoke.py
vaanieval/: __init__.py  __main__.py  api.py  cli.py  config.py  models.py  progress.py
vaanieval/adapters/: __init__.py  base.py  elevenlabs_adapter.py
vaanieval/reporting/: __init__.py  json_report.py  markdown_report.py
vaanieval/scenarios/: __init__.py  loader.py  schema.py
vaanieval/scoring/: __init__.py  evaluator.py  metrics.py  rubric.py
(+108 files in other folders)
