[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vaanieval"
version = "0.1.0"
description = "Plug-and-play evaluation library for ElevenLabs conversational agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Voice Agent Team" }
]
dependencies = [
  "elevenlabs",
  "python-dotenv",
  "PyYAML"
]

[project.optional-dependencies]
dev = [
  "bandit",
  "mypy",
  "pip-audit",
  "pre-commit",
  "pytest",
  "pytest-cov",
  "ruff",
  "types-PyYAML"
]
openai-evals = [
  "openai>=1.40.0"
]

[project.scripts]
vaanieval = "vaanieval.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["vaanieval*"]

[tool.setuptools.package-data]
vaanieval = [
  "datasets/smoke/*.yaml",
  "datasets/regression/*.yaml",
  "datasets/stress/*.yaml"
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
  "examples",
  "vaanieval.egg-info"
]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I"
]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
exclude = ["^\\.venv/", "^venv/"]

[tool.pytest.ini_options]
testpaths = ["tests"]

