[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vaanieval"
version = "0.1.0"
description = "Full-stack evaluation platform for voice AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Voice Agent Team" }
]
dependencies = [
  "elevenlabs",
  "python-dotenv",
  "PyYAML",
  "fastapi==0.116.1",
  "uvicorn[standard]==0.35.0",
  "sqlalchemy==2.0.43",
  "psycopg[binary]==3.2.13",
  "alembic==1.16.5",
  "pydantic==2.11.9",
  "pydantic-settings==2.11.0",
  "python-jose[cryptography]==3.3.0",
  "passlib[bcrypt]==1.7.4",
  "httpx==0.28.1",
  "python-multipart==0.0.20",
  "email-validator==2.2.0",
  "openai==1.93.0",
  "langchain==0.3.27",
  "langchain-openai==0.3.28",
  "langchain-anthropic==0.3.17"
]

[project.optional-dependencies]
dev = [
  "bandit",
  "mypy",
  "pip-audit",
  "pre-commit",
  "pytest",
  "pytest-cov",
  "ruff",
  "types-PyYAML"
]
openai-evals = [
  "openai>=1.40.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
  "examples",
  "vaanieval.egg-info"
]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I"
]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
exclude = ["^\\.venv/", "^venv/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "--cov-report=term-missing",
  "--cov-fail-under=90"
]
